Added ComputerCraft 1.80pr1 library

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,15 @@ minecraft {
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
+repositories {
+    /*
+    ivy {
+        name = "ComputerCraft"
+        artifactPattern "http://addons-origin.cursecdn.com/files/2311/39/[module][revision](.[ext])"
+    }
+    */
+}
+
 dependencies {
     // you may put jars on which you depend on in ./libs
     // or you may define them like so..
@@ -54,6 +63,8 @@ dependencies {
     // for more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
+
+    //compile "ComputerCraft:ComputerCraft:1.80pr1"
 
 }
 
