--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 version = "0.1"
 group = "de.codemakers.ccpsecurity" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "ccpsecurity"
+archivesBaseName = "CCPSecurity"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
