--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,10 @@ repositories {
         artifactPattern "http://addons-origin.cursecdn.com/files/2311/39/[module][revision](.[ext])"
     }
     */
+    maven {
+        url  'https://dl.bintray.com/rolandoislas/The-Framework'
+    }
+    //jcenter()
 }
 
 dependencies {
@@ -65,6 +69,7 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
     //compile "ComputerCraft:ComputerCraft:1.80pr1"
+    compile 'com.rolandoislas.theframework:TheFramework:1.12.2-1.0.1-build-T23'
 
 }
 
